Fix group leader section small screen

--- a/assets/css/people/team_leader.css
+++ b/assets/css/people/team_leader.css
@@ -14,20 +14,21 @@
 .sidebar-container {
     display: flex;
     flex-direction: column;
-    width: 370px;
+    /* width: 370px; */
 }
 
 .photo-container {
-    width: 360px;
-    height: 300px;
+    width: 100%;
     display: flex;
     align-items: center;
     /* justify-content: center; */
 }
 
 .photo {
-    width: 260px;
-    height: 260px;
+    width: 100%;
+    max-width: 260px;
+    height: 100%;
+    max-height: 260px;
     object-fit: cover;
     border-radius: 12px;
     margin-bottom: 1rem;
